--- a/iOSMobileArchitecture/Resources/Storyboards/TaskThree.storyboard
+++ b/iOSMobileArchitecture/Resources/Storyboards/TaskThree.storyboard
@@ -18,24 +18,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TCP-XC-8ur">
-                                <rect key="frame" x="16" y="128" width="288" height="77"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TCP-XC-8ur">
+                                <rect key="frame" x="16" y="128" width="288" height="117"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6As-g8-Qzn">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6As-g8-Qzn">
                                 <rect key="frame" x="16" y="269" width="227" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="TaskThreePartTwoViewController"/>
                                 <connections>
                                     <segue destination="9lt-Uu-IZu" kind="show" identifier="TaskThreePartTwoViewController" id="BKP-tT-KcP"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Efw-XN-ZDf">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Efw-XN-ZDf">
                                 <rect key="frame" x="16" y="310" width="238" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="TaskThreePartThreeViewController"/>
                                 <connections>
                                     <segue destination="OW5-AQ-Rel" kind="show" identifier="TaskThreePartThreeViewController" id="ylL-xm-swa"/>
@@ -43,6 +40,17 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="TCP-XC-8ur" firstAttribute="trailing" secondItem="Mvb-8n-3aK" secondAttribute="trailingMargin" id="Ovk-Ua-dP6"/>
+                            <constraint firstItem="TCP-XC-8ur" firstAttribute="leading" secondItem="6As-g8-Qzn" secondAttribute="leading" id="Tce-Gz-gN8"/>
+                            <constraint firstItem="Efw-XN-ZDf" firstAttribute="top" secondItem="6As-g8-Qzn" secondAttribute="bottom" constant="11" id="YK1-tF-Ptx"/>
+                            <constraint firstItem="Yp2-sK-87k" firstAttribute="bottom" secondItem="Efw-XN-ZDf" secondAttribute="bottom" constant="228" id="aFv-TB-3Q4"/>
+                            <constraint firstItem="6As-g8-Qzn" firstAttribute="leading" secondItem="Efw-XN-ZDf" secondAttribute="leading" id="cr7-Es-9mt"/>
+                            <constraint firstItem="6As-g8-Qzn" firstAttribute="top" secondItem="TCP-XC-8ur" secondAttribute="bottom" constant="24" id="dy1-UG-lt5"/>
+                            <constraint firstItem="6As-g8-Qzn" firstAttribute="centerY" secondItem="Mvb-8n-3aK" secondAttribute="centerY" id="e1o-SJ-Zw9"/>
+                            <constraint firstItem="TCP-XC-8ur" firstAttribute="leading" secondItem="Mvb-8n-3aK" secondAttribute="leadingMargin" id="tcz-K9-hnc"/>
+                            <constraint firstItem="TCP-XC-8ur" firstAttribute="top" secondItem="Yp2-sK-87k" secondAttribute="top" constant="64" id="xXf-TY-IFm"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Yp2-sK-87k"/>
                     </view>
                     <navigationItem key="navigationItem" id="o08-xQ-xaZ"/>
@@ -147,6 +155,9 @@
                                         <rect key="frame" x="89" y="331" width="143" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" title="Accept"/>
+                                        <connections>
+                                            <action selector="sendDate:" destination="OW5-AQ-Rel" eventType="touchUpInside" id="o91-QJ-Wqt"/>
+                                        </connections>
                                     </button>
                                     <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4DE-Kb-v9F">
                                         <rect key="frame" x="8" y="88" width="304" height="30"/>
