--- a/iOSMobileArchitecture/Resources/Storyboards/TaskFour.storyboard
+++ b/iOSMobileArchitecture/Resources/Storyboards/TaskFour.storyboard
@@ -18,9 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OTa-Mo-EZg">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="561"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OTa-Mo-EZg">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="72" id="hfx-ZW-08D">
@@ -35,6 +34,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="OTa-Mo-EZg" firstAttribute="bottom" secondItem="Y3b-5a-7uZ" secondAttribute="bottom" id="5rf-0U-n2d"/>
+                            <constraint firstItem="OTa-Mo-EZg" firstAttribute="trailing" secondItem="Y3b-5a-7uZ" secondAttribute="trailing" id="UvI-Ds-4VU"/>
+                            <constraint firstItem="OTa-Mo-EZg" firstAttribute="top" secondItem="HSQ-GU-hAU" secondAttribute="top" id="WxH-ZR-ce3"/>
+                            <constraint firstItem="OTa-Mo-EZg" firstAttribute="leading" secondItem="Y3b-5a-7uZ" secondAttribute="leading" id="aBz-gX-W9L"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Y3b-5a-7uZ"/>
                     </view>
                     <connections>
