--- a/iOSMobileArchitecture/Resources/Storyboards/TaskSeven.storyboard
+++ b/iOSMobileArchitecture/Resources/Storyboards/TaskSeven.storyboard
@@ -18,20 +18,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Нажми Push" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o2a-TE-7PD">
-                                <rect key="frame" x="16" y="223" width="288" height="39"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Нажми Push" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o2a-TE-7PD">
+                                <rect key="frame" x="16" y="241.5" width="288" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NW4-v9-iF9">
-                                <rect key="frame" x="70" y="20" width="180" height="181"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NW4-v9-iF9">
+                                <rect key="frame" x="70" y="20" width="180" height="180"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xgk-iU-9Aa">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xgk-iU-9Aa">
                                 <rect key="frame" x="122" y="274" width="77" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Push me"/>
                                 <connections>
                                     <action selector="sendImage:" destination="wGE-Z6-ixZ" eventType="touchUpInside" id="fdr-9g-iO8"/>
@@ -39,6 +36,18 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ady-jV-JtF" firstAttribute="trailing" secondItem="o2a-TE-7PD" secondAttribute="trailing" constant="16" id="5Wp-FM-Mjj"/>
+                            <constraint firstItem="NW4-v9-iF9" firstAttribute="top" secondItem="ady-jV-JtF" secondAttribute="top" id="CQ9-kR-ebq"/>
+                            <constraint firstItem="NW4-v9-iF9" firstAttribute="leading" secondItem="ady-jV-JtF" secondAttribute="leading" constant="70" id="CZy-vf-Rsp"/>
+                            <constraint firstItem="ady-jV-JtF" firstAttribute="trailing" secondItem="NW4-v9-iF9" secondAttribute="trailing" constant="70" id="K1O-5m-rTa"/>
+                            <constraint firstItem="ady-jV-JtF" firstAttribute="bottom" secondItem="xgk-iU-9Aa" secondAttribute="bottom" constant="264" id="Vea-er-Xhj"/>
+                            <constraint firstItem="ady-jV-JtF" firstAttribute="trailing" secondItem="xgk-iU-9Aa" secondAttribute="trailing" constant="121" id="VxD-rh-ilC"/>
+                            <constraint firstItem="xgk-iU-9Aa" firstAttribute="top" secondItem="o2a-TE-7PD" secondAttribute="bottom" constant="12" id="Zo3-o3-3c9"/>
+                            <constraint firstItem="o2a-TE-7PD" firstAttribute="top" secondItem="NW4-v9-iF9" secondAttribute="bottom" constant="41.5" id="dJu-e8-ItD"/>
+                            <constraint firstItem="o2a-TE-7PD" firstAttribute="leading" secondItem="ady-jV-JtF" secondAttribute="leading" constant="16" id="etB-pe-Atk"/>
+                            <constraint firstItem="xgk-iU-9Aa" firstAttribute="leading" secondItem="ady-jV-JtF" secondAttribute="leading" constant="122" id="fBb-eS-FHh"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="ady-jV-JtF"/>
                     </view>
                     <connections>
